tests/snapshots/title_screen__render_tests__title_empty_leaderboard.snap
---
source: tests/title_screen.rs
expression: buf_to_string(&terminal)
---
                                                                                
                                                                                
                                                                                
                                                                                
       ██████╗ ██╗      ██████╗  ██████╗██╗  ██╗████████╗██╗  ██╗████████╗      
       ██╔══██╗██║     ██╔═══██╗██╔════╝██║ ██╔╝╚══██╔══╝╚██╗██╔╝╚══██╔══╝      
       ██████╔╝██║     ██║   ██║██║     █████╔╝    ██║    ╚███╔╝    ██║         
       ██╔══██╗██║     ██║   ██║██║     ██╔═██╗    ██║    ██╔██╗    ██║         
       ██████╔╝███████╗╚██████╔╝╚██████╗██║  ██╗   ██║   ██╔╝ ██╗   ██║         
       ╚═════╝ ╚══════╝ ╚═════╝  ╚═════╝╚═╝  ╚═╝   ╚═╝   ╚═╝  ╚═╝   ╚═╝         
                      a terminal falling-block puzzle game                      
                                                                                
                             ╭─ high scores ──────╮                             
                             │                    │                             
                             │    no scores yet   │                             
                             │                    │                             
                             │                    │                             
                             │                    │                             
                             │                    │                             
                             │                    │                             
                             ╰────────────────────╯                             
                      move:  ← →   drop: space    pause:  p                     
                      rotate: z x  soft: ↓        quit:   q                     
                                                                                
                press any key to start     ·     r  reset scores
