tests/snapshots/title_screen__render_tests__title_with_scores.snap
---
source: tests/title_screen.rs
expression: buf_to_string(&terminal)
---
                                                                                
                                                                                
                                                                                
                                                                                
       ██████╗ ██╗      ██████╗  ██████╗██╗  ██╗████████╗██╗  ██╗████████╗      
       ██╔══██╗██║     ██╔═══██╗██╔════╝██║ ██╔╝╚══██╔══╝╚██╗██╔╝╚══██╔══╝      
       ██████╔╝██║     ██║   ██║██║     █████╔╝    ██║    ╚███╔╝    ██║         
       ██╔══██╗██║     ██║   ██║██║     ██╔═██╗    ██║    ██╔██╗    ██║         
       ██████╔╝███████╗╚██████╔╝╚██████╗██║  ██╗   ██║   ██╔╝ ██╗   ██║         
       ╚═════╝ ╚══════╝ ╚═════╝  ╚═════╝╚═╝  ╚═╝   ╚═╝   ╚═╝  ╚═╝   ╚═╝         
                      a terminal falling-block puzzle game                      
                                                                                
                             ╭─ high scores ──────╮                             
                             │   1.      12 345   │                             
                             │   2.       9 200   │                             
                             │   3.       6 140   │                             
                             │    4.         —    │                             
                             │    5.         —    │                             
                             │                    │                             
                             │                    │                             
                             ╰────────────────────╯                             
                      move:  ← →   drop: space    pause:  p                     
                      rotate: z x  soft: ↓        quit:   q                     
                                                                                
                press any key to start     ·     r  reset scores
